--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utd-8">
+  <title> My First Project </title>
+</head>
+<body>
+  <img src="IMG_1001.jpg" alt="my photo>
+  <div id="wrapper">
+    <h1> My first website </hq>
+    <nav id="navigation">
+      <ul>
+        <li><a href="#">Index</a></li>
+        <li><a href="#">About Me</a></li>
+      </ul>
+    </nav>
+  </div>
+</body>
+</html>
