--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title> My Project 1 - Resume</title>
+</head>
 
+<body a link="black" vlink="black">
+  <h1>Dhruvesh Patel</h1>
+  
+<nav>  
+  <a href="./index.html"> Home </a>
+  <a href="./AboutMe.html">AboutMe</a> 
+  <strong> Resume</strong>
+</nav>
+
+</h2> Resume </h2>
+</body>
