AboutMe and Index page
Updatig pages to check whether everything is falling in write place

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> My First Project </title>
+  <title> My Project 1- Home</title>
 </head>
-<body>
-  <h1> My first website </h1>
-  <div id="wrapper">
-    <header id="header">
-    <nav>
-      <ul>
-        <li id="nav-ind"><a href="../index.html">My Photo</a></li>
-        <li id="nav-me"<a href="AboutMe.html">AboutMe</a></li>
-        <li id="nav-res"<a href="../index.html#resume">Resume</a></li>
-      </ul>
-    </nav>
-  <img src="IMG_1001.JPG alt="my photo>
+
+<body a link="black" vlink="black">
+  <h1>Dhruvesh Patel</h1>
+  
+<!-- Menu Goes Here -->
+<nav>
+  <div id="page">
+    <strong>Home</strong> 
+    <a href="./AboutMe.html">AboutMe</a> 
+    <a href="./resume.html"> Resume</a>
   </div>
+</nav>
+
+<p> Welcome to my Home page of website 
 </body>
-</html>
