--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title> My Project 1 - About Me</title>
+</head>
+<body a link="black" vlink="black">
 
+  <h1>Dhruvesh Patel</h1>
+<nav>
+  <a href="./index.html">Home </a> 
+  <strong>AboutMe</strong> 
+  <a href="./resume.html"> Resume</a>
+</nav>
+
+<h2> AboutMe </h2>
+</body>
