--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <a href="./resume.html"> Resume</a>
   </div>
 </nav>
+<img src="random.png">
 
-<p> Welcome to my Home page of website 
+<p> Welcome to my Home page of website.</p>
+<p> It shows the content of the my whole website which consists of three pages which describes about myself.</p>
+<p> The very first page is Home page which gives the contents and the whole idea of how  my website would look like consiting of different pieces 
+ of information on different pages with their rich data. Home page is intial page which will inlcude image followed by the linked to seocond page in
+ which there will be a bref description of myself and the last page would end up by resume. </p>
+
 </body>
