Live link Error
Error in live link

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title> My Project 1 - About Me</title>
 </head>
-<body a link="black" vlink="black">
+<body>
 
   <h1>Dhruvesh Patel</h1>
 <nav>
