--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> My Project 1- Home</title>
 </head>
 
-<body a link="black" vlink="black">
+<body>
   <h1>Dhruvesh Patel</h1>
   
 <!-- Menu Goes Here -->
