--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
   <title> My Project 1 - Resume</title>
 </head>
 
-<body a link="black" vlink="black">
+<body>
   <h1>Dhruvesh Patel</h1>
   
 <nav>  
@@ -15,4 +15,5 @@
 </nav>
 
 <h2> Resume </h2>
+  
 </body>
