--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,9 +8,11 @@
 
   <h1>Dhruvesh Patel</h1>
 <nav>
-  <a href="./index.html">Home </a> 
-  <strong>AboutMe</strong> 
-  <a href="./resume.html"> Resume</a>
+  <div id="page">
+    <a href="./index.html">Home </a> 
+    <strong>AboutMe</strong> 
+    <a href="./resume.html"> Resume</a>
+  </div>
 </nav>
 
 <h2> AboutMe </h2>
@@ -23,3 +25,4 @@
   <p> I am HUGE <strong> Manchester United</strong> Fan. It is a soccer team from England. I like to play cricket, football known as soccer and Baskeball.
   I like to watch sports shows and also love listening to bollywood songs and few hollywood songs.
 </body>
+</html>
