--- a/resume.html
+++ b/resume.html
@@ -8,12 +8,15 @@
 <body>
   <h1>Dhruvesh Patel</h1>
   
-<nav>  
-  <a href="./index.html"> Home </a>
-  <a href="./AboutMe.html">AboutMe</a> 
-  <strong> Resume</strong>
+<nav> 
+  <div id="page">
+    <a href="./index.html"> Home </a>
+    <a href="./AboutMe.html">AboutMe</a> 
+    <strong> Resume</strong>
+  </div>
 </nav>
 
 <h2> Resume </h2>
   
 </body>
+</html>
