Error on first page
Home page under img tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="./resume.html"> Resume</a>
   </div>
 </nav>
-<img src="random.png">
+<img src="random.png" alt"my photo">
 
 <p> Welcome to my Home page of website.</p>
 <p> It shows the content of the my whole website which consists of three pages which describes about myself.</p>
