--- a/AboutMe.html
+++ b/AboutMe.html
@@ -17,10 +17,10 @@
 
 <h2> AboutMe </h2>
   <p> This page would consists of about myself and my hobbies, etc. </p>
-  <p> My self Dhruvesh Patel, I was born in India and I lived there for exaclty 20 years. Different countiries have different enviorrment and so is
+  <p> My self Dhruvesh Patel, I was born in India and I lived there for exaclty 20 years. Different countries have different enviorrment and so is
   with United States and India. I completed in total five (5) semester back in my country for my B.E degree and now I am transfer student. This is 
-  currently my 2nd semester after spring, and it keeps getting interesting as it goes. Often I do not like to socialize much with other people, but
-  when it comes to helping someone in need, I would love to do that. 
+  currently my 2nd semester after spring, and it keeps getting interesting as it goes. I like to socialize much with other people, but when it comes 
+  to helping someone in need, I would love to do that. I am always willing to learn new skills and develop to the best of my potential.</p>
   
   <p> I am HUGE <strong> Manchester United</strong> Fan. It is a soccer team from England. I like to play cricket, football known as soccer and Baskeball.
   I like to watch sports shows and also love listening to bollywood songs and few hollywood songs.
