--- a/resume.html
+++ b/resume.html
@@ -17,13 +17,26 @@
 </nav>
 
 <h2> Resume </h2>
+
+<p> 7568 N Chase Ave,Chicago, IL. 60645 | 773-400-8000 </p>
+<address>
+  <a href="mailto:dhruveshp14@gmail.com"> Dhruvesh Patel </a>
+</address>
 <h3>Education</h3>
-  <ul>
+<table>
+  <tr>
+    <td>High School Diploma</td>
+     <td>
+          2013
+     </td>
+  </tr>     
+</table>
+ <!-- <ul>
     <li>High School Diploma-2013</li>
     <li>Somewhat college-2015</li>
     <li>Pursuing Bachelor's Degree Information Technology and Management</li>
     <li>Currently in third year of college</li>
-  </ul>
+  </ul> -->
 <h3>Experiences</h3>
 <h4>Chicago News Now</h4>
   <ul>
