--- a/resume.html
+++ b/resume.html
@@ -26,10 +26,19 @@
 <table>
   <tr>
     <td>High School Diploma</td>
-     <td>
-          2013
-     </td>
-  </tr>     
+    <td>   2013  </td>
+  </tr>    
+  
+  <tr>
+    <td> Somewhat College </td>
+    <td>  2015  </td>
+  </tr>
+    
+  <tr>
+    <td>Pursuing Bachelor's Degree In Information Technology and Management </td>
+    <td>   Jan 2017 - Present   </td>
+  </tr>
+  
 </table>
  <!-- <ul>
     <li>High School Diploma-2013</li>
@@ -38,37 +47,50 @@
     <li>Currently in third year of college</li>
   </ul> -->
 <h3>Experiences</h3>
-<h4>Chicago News Now</h4>
+<h4>Chicago News Now</h4>  
+  <table>
+    <tr>
+      <td> Retail Job </td> 
+      <td>       April 2016 -  October 2016    </td>
+    </tr>
+  </table>
   <ul>
     <li>Worked as cashier</li>
     <li>Ordered and managed store inventory according to the sales data</li>
     <li>Responsible for calculating and analyzing daily financial accounts of the store</li>
   </ul>
-  <h4>Walgreens</h4>  
+  
+  <h4>Walgreens</h4>
+    <table>
+      <tr>
+        <td>     October 2016 - Present    </td>
+      </tr>
+    </table>
     <ul>
       <li>Started as cashier</li>
       <li>Shift lead(Manager)</li>
       <li>Provided exceptional customer service</li>
       <li>Operated computerized cash functions and error trapping technical difficulties</li>
     </ul>
-<h3>Special Skills</h3>
-  <ul>
-    <li>Able to work on flexible shift</li>
-    <li>Ability to work and stand for long hours and multi-tasking</li>
-    <li>Deep understanding of mathematical calculations</li>
-    <li>Well Developed customer service and communications skills</li>
-    <li>Helping everyone to the best I can</li>
-    <li>ABility to stock up</li>
-    <li>Properly organizing merchandise</li>
-  </ul>
-<h3>Key Skills</h3>
-  <ul>
-    <li>Strong communication skills with everyone</li>
-    <li>Ability to troubleshoot and comprehend problems</li>
-    <li>Capable of learning new skills and technologies to complete tasks</li>
-  </ul>
+  <h3>Special Skills</h3>
+    <ul>
+      <li>Able to work on flexible shift</li>
+      <li>Ability to work and stand for long hours and multi-tasking</li>
+      <li>Deep understanding of mathematical calculations</li>
+      <li>Well Developed customer service and communications skills</li>
+      <li>Helping everyone to the best I can</li>
+      <li>ABility to stock up</li>
+      <li>Properly organizing merchandise</li>
+    </ul>
+  <h3>Key Skills</h3>
+    <ul>
+      <li>Strong communication skills with everyone</li>
+      <li>Ability to troubleshoot and comprehend problems</li>
+      <li>Capable of learning new skills and technologies to complete tasks</li>
+    </ul>
  
-<p><strong>Technical Skills:</strong> Microsoft Word, Microsoft Excel, C++, PowerPoint,Java, SQL.</p>
-<p><strong>Languages:</strong> English, Hindi and English</p>
+  <p><strong>Technical Skills:</strong> Microsoft Word, Microsoft Excel, C++, PowerPoint,Java, SQL.</p>
+  <p><strong>Languages:</strong> English, Hindi and English</p>
+  
 </body>
 </html>
