--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <h1> My First Project </h1>
   <h1>Dhruvesh Patel</h1>
   
 <nav> 
@@ -20,37 +21,32 @@
 
 <p> 7568 N Chase Ave,Chicago, IL. 60645 | 773-400-8000 </p>
 <address>
-  <a href="mailto:dhruveshp14@gmail.com"> Dhruvesh Patel </a>
+ <p> Email to:  <a href="mailto:dhruveshp14@gmail.com"> Dhruvesh Patel </a> </p>
 </address>
 <h3>Education</h3>
 <table>
   <tr>
     <td>High School Diploma</td>
-    <td>   2013  </td>
+    <td>    2013  </td>
   </tr>    
   
   <tr>
     <td> Somewhat College </td>
-    <td>  2015  </td>
+    <td>   2015  </td>
   </tr>
     
   <tr>
     <td>Pursuing Bachelor's Degree In Information Technology and Management </td>
-    <td>   Jan 2017 - Present   </td>
+    <td>    Jan 2017 - Present   </td>
   </tr>
   
 </table>
- <!-- <ul>
-    <li>High School Diploma-2013</li>
-    <li>Somewhat college-2015</li>
-    <li>Pursuing Bachelor's Degree Information Technology and Management</li>
-    <li>Currently in third year of college</li>
-  </ul> -->
+ 
 <h3>Experiences</h3>
+  <h4> Retail Jobs </h4>
 <h4>Chicago News Now</h4>  
   <table>
     <tr>
-      <td> Retail Job </td> 
       <td>       April 2016 -  October 2016    </td>
     </tr>
   </table>
