--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-  <h1>Dhruvesh Patel</h1>
+  <h1> My First Project </h1>
+  <h2>Dhruvesh Patel</h2>
   
 <!-- Menu Goes Here -->
 <nav>
@@ -16,13 +17,24 @@
     <a href="./resume.html"> Resume</a>
   </div>
 </nav>
-<img src="random.png" alt="my photo">
+<img src="MyPic.jpg" alt="my photo">
+
+<ul>
+  <li> Home Page - First Page </li>
+  <li> AboutMe Page -  Second page </li>
+  <li> Resume page - Third Page </li> 
+</ul>   
 
 <p> Welcome to my Home page of website.</p>
 <p> It shows the content of the my whole website which consists of three pages which describes about myself.</p>
 <p> The very first page is Home page which gives the contents and the whole idea of how  my website would look like consiting of different pieces 
- of information on different pages with their rich data. Home page is intial page which will inlcude image followed by the linked to seocond page in
- which there will be a bref description of myself and the last page would end up by resume. </p>
+ of information on different pages with their rich data. Home page is intial page which will inlcude image followed by the linked to second page in
+ which there will be a brief description of myself and the last page would end up by resume. </p>
+ 
+<p> This is website for my project one </p>
+<p> Valid, Responsive-Ready HTML </p>
+<p><strong> Project Description :</strong> Created three richly structured HTML pages that will form the foundations of a professional web presence, 
+which also includes resume. </p>   
 
 </body>
 </html>
