Pre final changes
All the reqyuired changes have been made on required pages

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,8 +5,8 @@
   <title> My Project 1 - About Me</title>
 </head>
 <body>
-
-  <h1>Dhruvesh Patel</h1>
+  <h1>My first Project </h1>
+  <h2>Dhruvesh Patel</h2>
 <nav>
   <div id="page">
     <a href="./index.html">Home </a> 
@@ -21,8 +21,14 @@
   with United States and India. I completed in total five (5) semester back in my country for my B.E degree and now I am transfer student. This is 
   currently my 2nd semester after spring, and it keeps getting interesting as it goes. I like to socialize much with other people, but when it comes 
   to helping someone in need, I would love to do that. I am always willing to learn new skills and develop to the best of my potential.</p>
-  
-  <p> I am HUGE <strong> Manchester United</strong> Fan. It is a soccer team from England. I like to play cricket, football known as soccer and Baskeball.
-  I like to watch sports shows and also love listening to bollywood songs and few hollywood songs.
+
+  <p> I like to live very simple life along with working hard for my goals and getting it through achievemets. My favourite class is math, which I love to do
+  and I never get bore. Focus and hard work always pays off at the righ time, which I have experienced. </p>
+  <p> I am HUGE <strong> Manchester United</strong> Fan,  a soccer team from England. I like to play cricket, soccer and Baskeball.I like to watch sports 
+  shows and also love listening to bollywood songs and few hollywood songs. I like to travel different places across the world. I have dream of going to Manchester united 
+  soccer staidium to watch and feel the live atmosphere also known as Theatre Of Dreams. </p>
+  <img src="man_utd.jpg" alt="">
+    <p></p>
+  <img src="man-utd1.jpg" alt="">
 </body>
 </html>
