--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
   </tr>    
   
   <tr>
-    <td> Somewhat College </td>
+    <td> S.V.M.I.T </td>
     <td>   2015  </td>
   </tr>
     
@@ -53,7 +53,7 @@
   <ul>
     <li>Worked as cashier</li>
     <li>Ordered and managed store inventory according to the sales data</li>
-    <li>Responsible for calculating and analyzing daily financial accounts of the store</li>
+    <li>Calculated and Analyzed daily financial accounts of the store</li>
   </ul>
   
   <h4>Walgreens</h4>
@@ -70,23 +70,23 @@
     </ul>
   <h3>Special Skills</h3>
     <ul>
-      <li>Able to work on flexible shift</li>
+      <li>Flexible schdules</li>
       <li>Ability to work and stand for long hours and multi-tasking</li>
       <li>Deep understanding of mathematical calculations</li>
-      <li>Well Developed customer service and communications skills</li>
-      <li>Helping everyone to the best I can</li>
-      <li>ABility to stock up</li>
+      <li>Well developed customer service and communications skills</li>
+      <li>Helping everyone to the best of my abilities. </li>
+      <li>Ability to stock up</li>
       <li>Properly organizing merchandise</li>
     </ul>
   <h3>Key Skills</h3>
     <ul>
-      <li>Strong communication skills with everyone</li>
+      <li>Strong communication skills </li>
       <li>Ability to troubleshoot and comprehend problems</li>
       <li>Capable of learning new skills and technologies to complete tasks</li>
     </ul>
  
   <p><strong>Technical Skills:</strong> Microsoft Word, Microsoft Excel, C++, PowerPoint,Java, SQL.</p>
-  <p><strong>Languages:</strong> English, Hindi and English</p>
+  <p><strong>Languages:</strong> English, Hindi and Gujarati</p>
   
 </body>
 </html>
