--- a/AboutMe.html
+++ b/AboutMe.html
@@ -17,16 +17,16 @@
 
 <h2> AboutMe </h2>
   <p> This page would consists of about myself and my hobbies, etc. </p>
-  <p> My self Dhruvesh Patel, I was born in India and I lived there for exaclty 20 years. Different countries have different enviorrment and so is
+  <p> My self Dhruvesh Patel, I was born in India and lived there for exactly 20 years. Different countries have different enviorrment and so is
   with United States and India. I completed in total five (5) semester back in my country for my B.E degree and now I am transfer student. This is 
-  currently my 2nd semester after spring, and it keeps getting interesting as it goes. I like to socialize much with other people, but when it comes 
+  currently my 2nd semester after spring, and it keeps getting interesting as it goes. I like to socialize with other people, but when it comes 
   to helping someone in need, I would love to do that. I am always willing to learn new skills and develop to the best of my potential.</p>
 
-  <p> I like to live very simple life along with working hard for my goals and getting it through achievemets. My favourite class is math, which I love to do
-  and I never get bore. Focus and hard work always pays off at the righ time, which I have experienced. </p>
-  <p> I am HUGE <strong> Manchester United</strong> Fan,  a soccer team from England. I like to play cricket, soccer and Baskeball.I like to watch sports 
-  shows and also love listening to bollywood songs and few hollywood songs. I like to travel different places across the world. I have dream of going to Manchester united 
-  soccer staidium to watch and feel the live atmosphere also known as Theatre Of Dreams. </p>
+  <p> I like to live a very simple life along with working hard for my goals and getting it through achievemets. My favourite class is math, which I love to do
+  and I never get bored. Focus and hard work always pay off at the right time, which I have experienced. </p>
+  <p> I am HUGE <strong> Manchester United</strong> Fan, a soccer team from England. I like to play cricket, soccer and basketball.I like to watch sports 
+  shows and also love listening to bollywood songs and few hollywood songs. I like to travel different places across the world. I have dream of going to Manchester United 
+  soccer stadium to watch and feel the live ambience also known as Theatre of Dreams. </p>
   <img src="man_utd.jpg" alt="">
     <p></p>
   <img src="man-utd1.jpg" alt="">
