--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <li> Resume page - Third Page </li> 
 </ul>   
 
-<p> Welcome to my Home page of website.</p>
+<p> Welcome to the home page of my website.</p>
 <p> It shows the content of the my whole website which consists of three pages which describes about myself.</p>
 <p> The very first page is Home page which gives the contents and the whole idea of how  my website would look like consiting of different pieces 
  of information on different pages with their rich data. Home page is intial page which will inlcude image followed by the linked to second page in
