Image was not loaded
So, fixed the error.  And now working good.

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -28,9 +28,9 @@
   shows and also love listening to bollywood songs and few hollywood songs. I like to travel different places across the world. I have dream of going to Manchester United 
   soccer stadium to watch and feel the live ambience also known as Theatre of Dreams. </p>
   
-  <img src="man_utd.jpg" alt="">
+  <img src="images/man_utd.jpg" alt="">
     <p></p>
-  <img src="man-utd1.jpg" alt="">
+  <img src="images/man-utd1.jpg" alt="">
   
   
 </body>
