--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="./resume.html"> Resume</a>
     </div>
   </nav>
-  <img src="MyPic.jpg" alt="my photo">
+  <img src="images/MyPic.jpg" alt="my photo">
 
   <ul>
     <li> Home Page - First Page </li>
