Some editing done in resume page
Changes and added in contents of the resume page as per mentioned by my classmate.

--- a/resume.html
+++ b/resume.html
@@ -26,18 +26,22 @@
   <h3>Education</h3>
   <table>
     <tr>
+      <td><strong> Institution </strong></td>
+      <td><strong> &nbsp;&nbsp; Year</strong> </td>
+    </tr>
+    <tr>
       <td>High School Diploma</td>
-      <td> 2013 </td>
+      <td> &nbsp;&nbsp; 2013 </td>
     </tr>    
   
     <tr>
       <td> S.V.M.I.T </td>
-      <td> 2015 </td>
+      <td> &nbsp;&nbsp; 2015 </td>
     </tr>
     
     <tr>
       <td>Pursuing Bachelor's Degree In Information Technology and Management </td>
-      <td> Jan 2017 - Present  </td>
+      <td> &nbsp;&nbsp; Jan 2017 - Present  </td>
     </tr>
   
   </table>
