Change the file name
Change the file name linked with other two

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <nav> 
     <div id="page">
       <a href="./index.html"> Home </a>
-      <a href="./AboutMe.html">AboutMe</a> 
+      <a href="./aboutMe.html">AboutMe</a> 
       <strong> Resume</strong>
     </div>
   </nav>
