--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav>
     <div id="page">
       <strong>Home</strong> 
-      <a href="./AboutMe.html">AboutMe</a> 
+      <a href="./aboutMe.html">AboutMe</a> 
       <a href="./resume.html"> Resume</a>
     </div>
   </nav>
