--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
   <nav>
     <div id="page">
       <a href="./index.html">Home </a> 
-      <strong>aboutMe</strong> 
+      <strong>AboutMe</strong> 
       <a href="./resume.html"> Resume</a>
     </div>
   </nav>
