--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
     
   <h3>Special Skills</h3>
     <ul>
-      <li>Flexible schdules</li>
+      <li>Flexible schedule </li>
       <li>Ability to work and stand for long hours and multi-tasking</li>
       <li>Deep understanding of mathematical calculations</li>
       <li>Well developed customer service and communications skills</li>
